# lovenx

./: db.sqlite3  main.py  pyproject.toml
config/: env.py
server/: settings.py  urls.py
templates/: base.html  history.html  index.html  login.html  profile.html  signup.html  trade.html  xtrade.html
xapp/: admin.py  models.py  urls.py  views.py
xapp/libs/: cmc.py  paystack.py
xapp/migrations/: 0001_initial.py
